fix: some textures not showing correctly on GunSmithTableScreen